# volunteer-roster-agent

./: .gitignore  main.py  pyproject.toml
tests/: test_graph.py  test_models.py
volunteer_roster_agent/: __init__.py  config.py  sample_data.py
volunteer_roster_agent/graph/: __init__.py  builder.py  nodes.py  state.py
volunteer_roster_agent/graph/node/: classification.py  preparation.py  requirements.py  scheduling.py
volunteer_roster_agent/models/: __init__.py  message.py  shift.py  slot.py  volunteer.py
